kubernetes/fe/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: tecvinson-app
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
